# quay-sftp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.MD  index.html  justfile  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/agent-memory/iced-gui-expert/: MEMORY.md  feedback_application_boot.md  iced_014_run_functions.md
.claude/agents/: iced-gui-expert.md
crates/app/: index.html  package.json  pnpm-lock.yaml
crates/app/src/: ConnectionGateway.tsx  ErrorBoundry.tsx  RouterConfig.tsx
crates/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
crates/app/src-tauri/capabilities/: default.json
crates/app/src-tauri/src/: lib.rs  log_ext.rs  main.rs
crates/app/src/components/connection_list/: ConnectionItem.tsx  NewConnectionForm.tsx
crates/app/src/components/extends/: NumberInput.tsx  Select.tsx  Switch.tsx
crates/app/src/components/shell/: AppShell.tsx  WindowChrome.tsx
crates/app/src/css/: index.css
crates/app/src/pages/: BrowsePage.tsx  ConnectionsPage.tsx
crates/app/src/ts/: connection.ts
crates/cli/: Cargo.toml  README.MD
crates/cli/src/: args.rs  lib.rs  main.rs
crates/desktop/: Cargo.toml  README.MD  build.rs
crates/desktop/src/: app.rs  application_state.rs  main.rs  theme.rs
crates/desktop/src/components/: connections_page.rs  mod.rs  titlebar.rs
crates/desktop/src/utils/: center_win.rs  mod.rs
crates/desktop/src/widgets/: mod.rs  titlebar.rs
crates/desktop/src/widgets/components/: button.rs
crates/desktop/ui/: application_state.slint  icons.slint  main_window.slint
crates/desktop/ui/components/: Button.slint  GridComponent.slint  Input.slint  Link.slint  Tabs.slint  Titlebar.slint  titlebar.slint
crates/desktop/ui/components/connections_page/: ApplicationSplash.slint  ConnectionItem.slint  ConnectionsFooter.slint  ConnectionsList.slint  FloatingLogo.slint  NewConnectionForm.slint
crates/desktop/ui/pages/: connections.slint
crates/desktop/ui/themes/: color_palette.slint  dark.slint  layout.slint  light.slint  theme.slint
crates/lib/: Cargo.toml  README.MD
crates/lib/src/: SupportedProtocals.rs  lib.rs
crates/lib/src/ftp/: mod.rs
crates/lib/src/s3/: mod.rs
crates/lib/src/sftp/: mod.rs
nsis/: _entrypoint.nsi  app_info.nsi  constants.nsi  installer.nsi  pages.nsi  uninstaller.nsi
res/icons/: icon.icns
src/: RouterConfig.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs
src/components/: TagOptions.tsx
src/components/connection_list/: ApplicationSplash.tsx  FloatingLogo.tsx  NewConnectionForm.tsx  SavedConnectionsList.tsx  WorkspaceSelect.tsx
src/components/extends/: FileInput.tsx  Input.tsx
src/components/shell/: AppShell.tsx  WindowChrome.tsx  icons.tsx
src/css/: index.css
src/pages/: ConnectionsPage.tsx
src/ts/: connection.ts  workspace.ts
