[package]
name = "quay_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "quay"
path = "src/main.rs"

[lib]
name = "quay_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help", "usage", "suggestions", "string", "help", "error-context", "color", "unicode"] }
quay_lib = {path="../lib"}

# Workspace Crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }