[package]
name = "quay_sftp"
version = "0.1.0"
edition = "2024"
authors = ["Drew Chase"]

[dependencies]
# Windowing Crates
slint = { version = "=1.16.1", features = ["backend-winit", "renderer-skia"] }
i-slint-backend-winit = { version = "=1.16.1" }
winit = { version = "0.30.13" }
slint_borderless_windows = { version = "0.1.1" }
open = {version = "5.3.5", features = ["shellexecute-on-windows"]}

# Internal Plumbing
quay_cli = { path = "../cli" }
quay_lib = { path = "../lib" }

# Workspace Crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[build-dependencies]
slint-build = { version = "1.16.1" }
winresource = { version = "0.1.31" } # For adding the icon on build.
chrono = { version = "0.4.44", features = ["now", "clock"] }
