[package]
name = "quay_sftp"
version = "0.1.0"
edition = "2024"
authors = ["Drew Chase"]

[dependencies]
# Windowing Crates
iced = { version = "0.14.0", default-features = false, features = ["tiny-skia", "tokio"] }
open = { version = "5.3.5", features = ["shellexecute-on-windows"] }
aurora_iconify = { version="0.1.0" }
aurora_fonts = {version = "0.1.0"}

# Internal Plumbing
quay_lib = { path = "../lib" }

# Workspace Crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[build-dependencies]
winresource = { version = "0.1.31" } # For adding the icon on build.
chrono = { version = "0.4.44", features = ["now", "clock"] }
