[package]
name = "quay_sftp"
version = "0.0.0"
description = ""
authors = ["Drew Chase"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quay_sftp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = { version = "0.4.45" }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = { version = "2.3.5" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
tauri-plugin-dialog = { version = "2.7.1" }
tauri-plugin-opener = { version = "2.5.4" }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4" }


# Workspace Crates
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
tauri-plugin-log = "2"
